// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Git Sync - entity tab rendering landing view 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main pageBody"
    data-name="page-body"
  >
    <div
      class="StyledProps--font StyledProps--main bodyContainer"
    >
      <div
        class="StyledProps--font StyledProps--main collapseFeatures"
      >
        <div
          class="Collapse--main"
        >
          <div
            class="StyledProps--font StyledProps--main CollapseHeader--main Collapse--header collapseHeader"
          >
            <div
              class="StyledProps--font StyledProps--main CollapseHeader--leftSection"
            >
              <span
                class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey400"
                data-icon="main-chevron-right"
              >
                <svg
                  height="16"
                  viewBox="0 0 8 14"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                    fill="#4d5969"
                  />
                </svg>
              </span>
              <div
                class="Layout--horizontal StyledProps--main header StyledProps--flex"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--margin-left-small StyledProps--color StyledProps--color-primary7 StyledProps--inline"
                >
                  gitSyncRepoTest
                </span>
                <div
                  class="OverlaySpinner--overlaySpinner"
                >
                  <form
                    class="FormikForm--main"
                  >
                    <div>
                      <div
                        class="bp3-form-group"
                        data-id="branch-0"
                      >
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="bp3-popover-wrapper Select--main bp3-fill"
                          >
                            <div
                              class="bp3-popover-target"
                            >
                              <div
                                class="bp3-input-group"
                              >
                                <span
                                  class="bp3-input-left-container"
                                >
                                  <span
                                    class="bp3-icon StyledProps--main"
                                    data-icon="git-new-branch"
                                  >
                                    <svg
                                      height="16"
                                      viewBox="0 0 13 16"
                                      width="16"
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <path
                                        d="M10.406.003a2.399 2.399 0 00-.8 4.658v.94a.8.8 0 01-.8.8H4.001a2.413 2.413 0 00-.8.14V4.66A2.399 2.399 0 002.402 0a2.399 2.399 0 00-.8 4.661v6.678a2.399 2.399 0 00.8 4.661 2.399 2.399 0 00.8-4.661v-2.54a.8.8 0 01.8-.799h4.803a2.4 2.4 0 002.402-2.4v-.939a2.399 2.399 0 00-.8-4.658z"
                                        fill="currentColor"
                                      />
                                    </svg>
                                  </span>
                                </span>
                                <input
                                  autocomplete="off"
                                  class="bp3-input"
                                  name="branch"
                                  placeholder="Search..."
                                  style="padding-right: 0px; padding-left: 0px;"
                                  type="text"
                                  value="master"
                                />
                                <span
                                  class="bp3-input-action"
                                >
                                  <span
                                    class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                                    icon="caret-down"
                                  >
                                    <svg
                                      data-icon="caret-down"
                                      height="14"
                                      viewBox="0 0 16 16"
                                      width="14"
                                    >
                                      <desc>
                                        caret-down
                                      </desc>
                                      <path
                                        d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                        fill-rule="evenodd"
                                      />
                                    </svg>
                                  </span>
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </form>
                </div>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main"
            />
          </div>
          <div
            class="Collapse--collapse"
          >
            <div
              class="bp3-collapse collapse"
            >
              <div
                aria-hidden="false"
                class="bp3-collapse-body"
                style="transform: translateY(-undefinedpx);"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main collapseFeatures"
      >
        <div
          class="Collapse--main"
        >
          <div
            class="StyledProps--font StyledProps--main CollapseHeader--main Collapse--header collapseHeader"
          >
            <div
              class="StyledProps--font StyledProps--main CollapseHeader--leftSection"
            >
              <span
                class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey400"
                data-icon="main-chevron-right"
              >
                <svg
                  height="16"
                  viewBox="0 0 8 14"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                    fill="#4d5969"
                  />
                </svg>
              </span>
              <div
                class="Layout--horizontal StyledProps--main header StyledProps--flex"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--margin-left-small StyledProps--color StyledProps--color-primary7 StyledProps--inline"
                >
                  gitSyncRepo
                </span>
                <div
                  class="OverlaySpinner--overlaySpinner"
                >
                  <form
                    class="FormikForm--main"
                  >
                    <div>
                      <div
                        class="bp3-form-group"
                        data-id="branch-0"
                      >
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="bp3-popover-wrapper Select--main bp3-fill"
                          >
                            <div
                              class="bp3-popover-target"
                            >
                              <div
                                class="bp3-input-group"
                              >
                                <span
                                  class="bp3-input-left-container"
                                >
                                  <span
                                    class="bp3-icon StyledProps--main"
                                    data-icon="git-new-branch"
                                  >
                                    <svg
                                      height="16"
                                      viewBox="0 0 13 16"
                                      width="16"
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <path
                                        d="M10.406.003a2.399 2.399 0 00-.8 4.658v.94a.8.8 0 01-.8.8H4.001a2.413 2.413 0 00-.8.14V4.66A2.399 2.399 0 002.402 0a2.399 2.399 0 00-.8 4.661v6.678a2.399 2.399 0 00.8 4.661 2.399 2.399 0 00.8-4.661v-2.54a.8.8 0 01.8-.799h4.803a2.4 2.4 0 002.402-2.4v-.939a2.399 2.399 0 00-.8-4.658z"
                                        fill="currentColor"
                                      />
                                    </svg>
                                  </span>
                                </span>
                                <input
                                  autocomplete="off"
                                  class="bp3-input"
                                  name="branch"
                                  placeholder="Search..."
                                  style="padding-right: 0px; padding-left: 0px;"
                                  type="text"
                                  value="feature"
                                />
                                <span
                                  class="bp3-input-action"
                                >
                                  <span
                                    class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                                    icon="caret-down"
                                  >
                                    <svg
                                      data-icon="caret-down"
                                      height="14"
                                      viewBox="0 0 16 16"
                                      width="14"
                                    >
                                      <desc>
                                        caret-down
                                      </desc>
                                      <path
                                        d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                        fill-rule="evenodd"
                                      />
                                    </svg>
                                  </span>
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </form>
                </div>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main"
            />
          </div>
          <div
            class="Collapse--collapse"
          >
            <div
              class="bp3-collapse collapse"
            >
              <div
                aria-hidden="false"
                class="bp3-collapse-body"
                style="transform: translateY(-undefinedpx);"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Git Sync - entity tab rendering summary view of a gitSyncRepo  1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main StyledProps--padding-small"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
    >
      <div
        class="bp3-card bp3-elevation-0 Card--card"
      >
        <div
          class="Layout--horizontal StyledProps--main"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--margin-small StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey600"
          >
            Pipelines
          </p>
          <p
            class="StyledProps--font StyledProps--main StyledProps--margin-small StyledProps--padding-left-small StyledProps--padding-right-small StyledProps--border StyledProps--border-false StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-primary6 StyledProps--background-primary1"
          >
            1
          </p>
        </div>
        <div
          class="table table"
        >
          <div
            class="header"
            role="row"
          >
            <div
              class="cell"
              colspan="1"
              role="columnheader"
              style="width: 25%;"
            >
              NAME
            </div>
            <div
              class="cell"
              colspan="1"
              role="columnheader"
              style="width: 25%;"
            >
              IDENTIFIER
            </div>
            <div
              class="cell"
              colspan="1"
              role="columnheader"
              style="width: 50%;"
            >
              PATH
            </div>
          </div>
          <div
            class="body"
          >
            <div
              class="row card"
              role="row"
            >
              <div
                class="cell"
                role="cell"
                style="width: 25%;"
              >
                <div
                  class="Layout--horizontal StyledProps--main"
                >
                  <span
                    class="bp3-icon StyledProps--main StyledProps--inline"
                    data-icon="pipeline-ng"
                  >
                    <svg
                      height="16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g
                        fill="#25A6F7"
                      >
                        <path
                          d="M17.857 2.705h-3.672a2.85 2.85 0 00-5.614.714 2.85 2.85 0 005.614.714h3.672c.395 0 .714.32.714.715v6.428c0 .395-.32.714-.714.714h-6.786a.714.714 0 100 1.429h6.786c1.184 0 2.143-.96 2.143-2.143V4.848c0-1.184-.96-2.143-2.143-2.143zM11.43 4.848a1.429 1.429 0 110-2.858 1.429 1.429 0 010 2.858z"
                        />
                        <path
                          d="M17.143 14.848c-1.28 0-2.352.848-2.715 2.01H7.143a.711.711 0 01-.709-.685 2.85 2.85 0 00-.72-5.611 2.844 2.844 0 00-2.46 1.428H2.143a.714.714 0 01-.714-.714V4.848c0-.395.32-.715.714-.715h4.643a.714.714 0 000-1.428H2.143C.959 2.705 0 3.665 0 4.848v6.428c0 1.184.96 2.143 2.143 2.143h.714a2.85 2.85 0 002.147 2.757 2.14 2.14 0 002.139 2.11h7.203a2.857 2.857 0 102.797-3.438zM4.286 13.419a1.429 1.429 0 112.858 0 1.429 1.429 0 01-2.858 0zm12.857 5.714a1.429 1.429 0 110-2.858 1.429 1.429 0 010 2.858z"
                        />
                      </g>
                    </svg>
                  </span>
                  <span
                    class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--padding-left-small StyledProps--inline"
                    style="--text-line-clamp: 1;"
                  >
                    pipelineOne
                  </span>
                </div>
              </div>
              <div
                class="cell"
                role="cell"
                style="width: 25%;"
              >
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main"
                  style="--text-line-clamp: 1;"
                >
                  pipelineOne
                </p>
              </div>
              <div
                class="cell"
                role="cell"
                style="width: 50%;"
              >
                <a
                  href="https://github.com/wings-software/sunnykesh-gitSync/blob/gitSync/second/.harness/pipelineOne.yaml"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <p
                    class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-primary7"
                    style="--text-line-clamp: 1;"
                  >
                    https://github.com/wings-software/sunnykesh-gitSync/blob/gitSync/second/.harness/pipelineOne.yaml
                  </p>
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="bp3-card bp3-elevation-0 Card--card"
      >
        <div
          class="Layout--horizontal StyledProps--main"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--margin-small StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey600"
          >
            Connectors
          </p>
          <p
            class="StyledProps--font StyledProps--main StyledProps--margin-small StyledProps--padding-left-small StyledProps--padding-right-small StyledProps--border StyledProps--border-false StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-primary6 StyledProps--background-primary1"
          >
            4
          </p>
        </div>
        <div
          class="table table"
        >
          <div
            class="header"
            role="row"
          >
            <div
              class="cell"
              colspan="1"
              role="columnheader"
              style="width: 25%;"
            >
              NAME
            </div>
            <div
              class="cell"
              colspan="1"
              role="columnheader"
              style="width: 25%;"
            >
              IDENTIFIER
            </div>
            <div
              class="cell"
              colspan="1"
              role="columnheader"
              style="width: 50%;"
            >
              PATH
            </div>
          </div>
          <div
            class="body"
          >
            <div
              class="row card"
              role="row"
            >
              <div
                class="cell"
                role="cell"
                style="width: 25%;"
              >
                <div
                  class="Layout--horizontal StyledProps--main"
                >
                  <span
                    class="bp3-icon StyledProps--main StyledProps--inline"
                    data-icon="resources-icon"
                  >
                    <svg
                      height="16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M10.003 0a9.893 9.893 0 00-4.348.992.5.5 0 00.436.9A8.912 8.912 0 0110.003 1 8.996 8.996 0 112.17 5.564a.5.5 0 10-.872-.492A10 10 0 1010.003 0zM2.587 3.152a1 1 0 102 0 1 1 0 00-2 0zM12.927 5.2a.496.496 0 00-.228-.668 6.1 6.1 0 10-2.692 11.572 6.104 6.104 0 006.024-7.052.5.5 0 00-.988.148 5.092 5.092 0 11-2.8-3.784.496.496 0 00.684-.216zm1.396 2.48a1 1 0 10.22-1.988 1 1 0 00-.22 1.988zM9.003 10a1 1 0 102 0 1 1 0 00-2 0z"
                        fill="#25A6F7"
                      />
                    </svg>
                  </span>
                  <span
                    class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--padding-left-small StyledProps--inline"
                    style="--text-line-clamp: 1;"
                  >
                    Connector One
                  </span>
                </div>
              </div>
              <div
                class="cell"
                role="cell"
                style="width: 25%;"
              >
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main"
                  style="--text-line-clamp: 1;"
                >
                  ConnectorOne
                </p>
              </div>
              <div
                class="cell"
                role="cell"
                style="width: 50%;"
              >
                <a
                  href="https://github.com/wings-software/sunnykesh-gitSync/blob/gitSync/second/.harness/abc.yaml"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <p
                    class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-primary7"
                    style="--text-line-clamp: 1;"
                  >
                    https://github.com/wings-software/sunnykesh-gitSync/blob/gitSync/second/.harness/abc.yaml
                  </p>
                </a>
              </div>
            </div>
            <div
              class="row card"
              role="row"
            >
              <div
                class="cell"
                role="cell"
                style="width: 25%;"
              >
                <div
                  class="Layout--horizontal StyledProps--main"
                >
                  <span
                    class="bp3-icon StyledProps--main StyledProps--inline"
                    data-icon="resources-icon"
                  >
                    <svg
                      height="16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M10.003 0a9.893 9.893 0 00-4.348.992.5.5 0 00.436.9A8.912 8.912 0 0110.003 1 8.996 8.996 0 112.17 5.564a.5.5 0 10-.872-.492A10 10 0 1010.003 0zM2.587 3.152a1 1 0 102 0 1 1 0 00-2 0zM12.927 5.2a.496.496 0 00-.228-.668 6.1 6.1 0 10-2.692 11.572 6.104 6.104 0 006.024-7.052.5.5 0 00-.988.148 5.092 5.092 0 11-2.8-3.784.496.496 0 00.684-.216zm1.396 2.48a1 1 0 10.22-1.988 1 1 0 00-.22 1.988zM9.003 10a1 1 0 102 0 1 1 0 00-2 0z"
                        fill="#25A6F7"
                      />
                    </svg>
                  </span>
                  <span
                    class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--padding-left-small StyledProps--inline"
                    style="--text-line-clamp: 1;"
                  >
                    dailyTestOne
                  </span>
                </div>
              </div>
              <div
                class="cell"
                role="cell"
                style="width: 25%;"
              >
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main"
                  style="--text-line-clamp: 1;"
                >
                  dailyTestOne
                </p>
              </div>
              <div
                class="cell"
                role="cell"
                style="width: 50%;"
              >
                <a
                  href="https://github.com/wings-software/sunnykesh-gitSync/blob/gitSync/second/.harness/dailyTestOne.yaml"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <p
                    class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-primary7"
                    style="--text-line-clamp: 1;"
                  >
                    https://github.com/wings-software/sunnykesh-gitSync/blob/gitSync/second/.harness/dailyTestOne.yaml
                  </p>
                </a>
              </div>
            </div>
          </div>
        </div>
        <p
          class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-primary7 StyledProps--padding-left-huge StyledProps--padding-bottom-large"
          style="cursor: pointer;"
        >
          gitsync.seeMore
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Git Sync - entity tab rendering summary view of a gitSyncRepo  2`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main StyledProps--padding-small"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
    >
      <div
        class="bp3-card bp3-elevation-0 Card--card"
      >
        <div
          class="Layout--horizontal StyledProps--main"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--margin-small StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey600"
          >
            Pipelines
          </p>
          <p
            class="StyledProps--font StyledProps--main StyledProps--margin-small StyledProps--padding-left-small StyledProps--padding-right-small StyledProps--border StyledProps--border-false StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-primary6 StyledProps--background-primary1"
          >
            1
          </p>
        </div>
        <div
          class="table table"
        >
          <div
            class="header"
            role="row"
          >
            <div
              class="cell"
              colspan="1"
              role="columnheader"
              style="width: 25%;"
            >
              NAME
            </div>
            <div
              class="cell"
              colspan="1"
              role="columnheader"
              style="width: 25%;"
            >
              IDENTIFIER
            </div>
            <div
              class="cell"
              colspan="1"
              role="columnheader"
              style="width: 50%;"
            >
              PATH
            </div>
          </div>
          <div
            class="body"
          >
            <div
              class="row card"
              role="row"
            >
              <div
                class="cell"
                role="cell"
                style="width: 25%;"
              >
                <div
                  class="Layout--horizontal StyledProps--main"
                >
                  <span
                    class="bp3-icon StyledProps--main StyledProps--inline"
                    data-icon="pipeline-ng"
                  >
                    <svg
                      height="16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g
                        fill="#25A6F7"
                      >
                        <path
                          d="M17.857 2.705h-3.672a2.85 2.85 0 00-5.614.714 2.85 2.85 0 005.614.714h3.672c.395 0 .714.32.714.715v6.428c0 .395-.32.714-.714.714h-6.786a.714.714 0 100 1.429h6.786c1.184 0 2.143-.96 2.143-2.143V4.848c0-1.184-.96-2.143-2.143-2.143zM11.43 4.848a1.429 1.429 0 110-2.858 1.429 1.429 0 010 2.858z"
                        />
                        <path
                          d="M17.143 14.848c-1.28 0-2.352.848-2.715 2.01H7.143a.711.711 0 01-.709-.685 2.85 2.85 0 00-.72-5.611 2.844 2.844 0 00-2.46 1.428H2.143a.714.714 0 01-.714-.714V4.848c0-.395.32-.715.714-.715h4.643a.714.714 0 000-1.428H2.143C.959 2.705 0 3.665 0 4.848v6.428c0 1.184.96 2.143 2.143 2.143h.714a2.85 2.85 0 002.147 2.757 2.14 2.14 0 002.139 2.11h7.203a2.857 2.857 0 102.797-3.438zM4.286 13.419a1.429 1.429 0 112.858 0 1.429 1.429 0 01-2.858 0zm12.857 5.714a1.429 1.429 0 110-2.858 1.429 1.429 0 010 2.858z"
                        />
                      </g>
                    </svg>
                  </span>
                  <span
                    class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--padding-left-small StyledProps--inline"
                    style="--text-line-clamp: 1;"
                  >
                    pipelineOne
                  </span>
                </div>
              </div>
              <div
                class="cell"
                role="cell"
                style="width: 25%;"
              >
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main"
                  style="--text-line-clamp: 1;"
                >
                  pipelineOne
                </p>
              </div>
              <div
                class="cell"
                role="cell"
                style="width: 50%;"
              >
                <a
                  href="https://github.com/wings-software/sunnykesh-gitSync/blob/gitSync/second/.harness/pipelineOne.yaml"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <p
                    class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-primary7"
                    style="--text-line-clamp: 1;"
                  >
                    https://github.com/wings-software/sunnykesh-gitSync/blob/gitSync/second/.harness/pipelineOne.yaml
                  </p>
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="bp3-card bp3-elevation-0 Card--card"
      >
        <div
          class="Layout--horizontal StyledProps--main"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--margin-small StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey600"
          >
            Connectors
          </p>
          <p
            class="StyledProps--font StyledProps--main StyledProps--margin-small StyledProps--padding-left-small StyledProps--padding-right-small StyledProps--border StyledProps--border-false StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-primary6 StyledProps--background-primary1"
          >
            4
          </p>
        </div>
        <div
          class="StyledProps--font StyledProps--main StyledProps--padding-small"
        >
          <div
            class="table table"
          >
            <div
              class="header"
              role="row"
            >
              <div
                class="cell sortable"
                colspan="1"
                role="columnheader"
                style="width: 25%;"
                title="Toggle SortBy"
              >
                NAME
                <span
                  class="bp3-icon bp3-icon-double-caret-vertical StyledProps--main StyledProps--padding-left-small"
                  icon="double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                    height="15"
                    viewBox="0 0 16 16"
                    width="15"
                  >
                    <desc>
                      double-caret-vertical
                    </desc>
                    <path
                      d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="cell sortable"
                colspan="1"
                role="columnheader"
                style="width: 25%;"
                title="Toggle SortBy"
              >
                IDENTIFIER
                <span
                  class="bp3-icon bp3-icon-double-caret-vertical StyledProps--main StyledProps--padding-left-small"
                  icon="double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                    height="15"
                    viewBox="0 0 16 16"
                    width="15"
                  >
                    <desc>
                      double-caret-vertical
                    </desc>
                    <path
                      d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="cell sortable"
                colspan="1"
                role="columnheader"
                style="width: 50%;"
                title="Toggle SortBy"
              >
                PATH
                <span
                  class="bp3-icon bp3-icon-double-caret-vertical StyledProps--main StyledProps--padding-left-small"
                  icon="double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                    height="15"
                    viewBox="0 0 16 16"
                    width="15"
                  >
                    <desc>
                      double-caret-vertical
                    </desc>
                    <path
                      d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
            </div>
            <div
              class="body"
            />
          </div>
          <p
            class="StyledProps--font StyledProps--main StyledProps--padding-large StyledProps--color StyledProps--color-primary7"
          >
            gitsync.seeLess
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
